--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -4,7 +4,7 @@ SECRET_KEY="CHANGE-ME"
 DEBUG= False
 
 # Comma Separated values
-ALLOWED_HOSTS="127.0.0.1, localhost"
+ALLOWED_HOSTS=127.0.0.1,localhost
 
 DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="CHANGE-ME"
