--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 asgiref==3.8.1
 bleach==6.2.0
-Django==5.2.1  
+dj-database-url==2.3.0
+Django==5.2.1
 django-axes==8.0.0
 django-summernote==0.8.20.0
+gunicorn==23.0.0
 packaging==25.0
 pillow==11.1.0
 psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 tzdata==2025.2
 webencodings==0.5.1
+whitenoise==6.9.0
